# gat

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/toolkits_of_roc_yin/: MainActivity.kt
gat-server/: Cargo.toml  README.md
gat-server/src/: cli.rs  main.rs  toolkits.rs  utils.rs
gat-server/src/toolkits/: msa.rs  pair_alignment.rs
gat-server/src/utils/: dna.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/pages/: main_page.dart  msa.dart  msa_result_page.dart  pair_alignment.dart  pair_alignment_with_ref_genome.dart
lib/utils/: align_tile.dart  file_selector.dart  np.dart  single_alignment.dart  single_msa.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
