[package]
name = "gat"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
mm2 = "0.23.3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
lazy_static = "1.5.0"
clap = {version="4.4", features=["derive"]}
